<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_details" />

            <ProgressBar
                android:id="@+id/progress_determinate"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="10" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textStyle="bold"
        android:text="@string/detail"
        android:textColor="@color/quantum_black_100"
        android:textSize="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_50ssp"/>
    <LinearLayout
        android:id="@+id/linearSell"
        android:tag="0"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyle"
            android:text="@string/Sell" />
        <RadioButton
            android:id="@+id/rdSell"
            style="@style/RadioSytle" />
    </LinearLayout>
    <View
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:background="@color/quantum_grey300"
        android:layout_height="@dimen/_1sdp"/>
    <LinearLayout
        android:id="@+id/linRent"
        android:tag="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyle"
            android:text="@string/Rent" />
        <RadioButton
            android:id="@+id/rdRent"
            style="@style/RadioSytle" />
    </LinearLayout>
    <View
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:background="@color/quantum_grey300"
        android:layout_height="@dimen/_1sdp"/>
    <LinearLayout
        android:id="@+id/linPg"
        android:tag="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyle"
            android:text="@string/pg" />
        <RadioButton
            android:id="@+id/rdpg"
            style="@style/RadioSytle" />
    </LinearLayout>
    <View
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:background="@color/quantum_grey300"
        android:layout_height="@dimen/_1sdp"/>
</LinearLayout>