<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_details" />

            <ProgressBar
                android:id="@+id/progress_determinate"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="10" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50ssp"
        android:text="@string/propertydetail"
        android:textColor="@color/quantum_black_100"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnResdential"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/Residential" />
        <Button
            android:id="@+id/btnCommercial"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/Commercial"/>
    </LinearLayout>
    <View
        android:layout_marginTop="@dimen/_300sdp"
        android:layout_gravity="bottom"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:background="@color/quantum_grey300"
        android:layout_height="@dimen/_1sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_5sdp">
            <ImageView
                android:id="@+id/imgCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_centerVertical="true"/>
            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imgCart"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/_10sdp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/your_balance"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/cash_magic"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <TextView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignBottom="@+id/imgCart"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="231dp"
                android:layout_marginBottom="-28dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                tools:ignore="RtlCompat" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>